--- a/src/main/resources/templates/fragments/gauge.html
+++ b/src/main/resources/templates/fragments/gauge.html
@@ -31,19 +31,19 @@
                             backgroundColor: '#ffffff',
                             width: 30,
                             ranges: [
-                                { startValue: 78.0, endValue: 79.5, color: '#ff8228' },
-                                { startValue: 79.5, endValue: 81.1, color: '#4166f5' },
-                                { startValue: 81.0, endValue: 82.0, color: '#ffc228' },
-                                { startValue: 82.0, endValue: 82.5, color: '#ff8228' }
+                                { startValue: 78.0, endValue: 79.5, color: '#ff8228' }, // 위험1
+                                { startValue: 79.5, endValue: 81 , color: '#4166f5'}, //안전
+                                { startValue: 81.0, endValue: 82.0, color: '#ffc228' }, // 경고
+                                { startValue: 82.0, endValue: 82.5, color: '#ff8228' } // 위험2
                             ]
                         },
                         valueIndicator: { color: '#000' },
-                        geometry: { startAngle: 180, endAngle: 360 },
+                        geometry: { startAngle: 200, endAngle: 340 },
                         scale: {
                             startValue: 78.0,
                             endValue:   this._higherValue,
                             orientation: 'outside',
-                            tick:        { visible: true, length: 20, width: 1, color: '#101010' },
+                            tick:        { visible: true, length: 20, width: 1, color: '#000' },
                             minorTick:   { visible: true, length: 5, width: 1, color: '#000' },
                             label:       { font: { color: '#4c5156', size: 12 } }
                         },
@@ -52,7 +52,7 @@
                             text: this._title,
                             subtitle: {
                                 text: this._subtitle,
-                                font: { weight: 600, size: 24 }
+                                font: { weight: 600, size: 20 }
                             }
                         },
                         value: this._initialValue
