--- a/src/main/resources/templates/monitoring/errorMonitoring.html
+++ b/src/main/resources/templates/monitoring/errorMonitoring.html
@@ -9,10 +9,10 @@
             <canvas id="weeklyLineChart" width="600" height="300"></canvas>
         </div>
     </div>
-    <button id="showErrorToastBtn" class="btn btn-primary position-fixed bottom-0 end-0 m-4" style="z-index: 1100;">
+    <button id="showErrorToastBtn" class="btn btn-refoam position-fixed bottom-0 end-0 m-4" style="z-index: 1100;">
         📋 리포트 보기
     </button>
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1100;">
+    <div class="position-fixed bottom-0 end-0 p-3 mb-5" style="z-index: 1100;">
         <div id="errorToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <strong class="me-auto">📋 AI 리포트</strong>
