--- a/src/main/resources/templates/fragments/gauge.html
+++ b/src/main/resources/templates/fragments/gauge.html
@@ -8,90 +8,90 @@
     </div>
 
     <!-- 1) jQuery, DevExtreme, Socket.io -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn3.devexpress.com/jslib/22.2.6/js/dx.all.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
+<!--    <script src="https://cdn3.devexpress.com/jslib/22.2.6/js/dx.all.js"></script>-->
+<!--    <script src="/socket.io/socket.io.js"></script>-->
 
 
     <!-- 5) 게이지 생성 스크립트 -->
-    <script>
-        $(function() {
-            // 1) GaugeChart 클래스
-            class GaugeChart {
-                constructor(el, { initialValue, higherValue, title, subtitle }) {
-                    this._el           = el;
-                    this._initialValue = initialValue;
-                    this._higherValue  = higherValue;
-                    this._title        = title;
-                    this._subtitle     = subtitle;
-                }
-                _buildConfig() {
-                    return {
-                        rangeContainer: {
-                            backgroundColor: '#ffffff',
-                            width: 30,
-                            ranges: [
-                                { startValue: 78.0, endValue: 79.5, color: '#ff8228' }, // 위험1
-                                { startValue: 79.5, endValue: 81 , color: '#4166f5'}, //안전
-                                { startValue: 81.0, endValue: 82.0, color: '#ffc228' }, // 경고
-                                { startValue: 82.0, endValue: 82.5, color: '#ff8228' } // 위험2
-                            ]
-                        },
-                        valueIndicator: { color: '#000' },
-                        geometry: { startAngle: 200, endAngle: 340 },
-                        scale: {
-                            startValue: 78.0,
-                            endValue:   this._higherValue,
-                            orientation: 'outside',
-                            tick:        { visible: true, length: 20, width: 1, color: '#000' },
-                            minorTick:   { visible: true, length: 5, width: 1, color: '#000' },
-                            label:       { font: { color: '#4c5156', size: 12 } }
-                        },
-                        title: {
-                            verticalAlignment: 'bottom',
-                            text: this._title,
-                            subtitle: {
-                                text: this._subtitle,
-                                font: { weight: 600, size: 20 }
-                            }
-                        },
-                        value: this._initialValue
-                    };
-                }
-                init() {
-                    // 인스턴스를 this._gauge에 저장
-                    this._gauge = $(this._el)
-                        .dxCircularGauge(this._buildConfig())
-                        .dxCircularGauge('instance');
-                    return this;
-                }
-            }
+<!--    <script>-->
+<!--        $(function() {-->
+<!--            // 1) GaugeChart 클래스-->
+<!--            class GaugeChart {-->
+<!--                constructor(el, { initialValue, higherValue, title, subtitle }) {-->
+<!--                    this._el           = el;-->
+<!--                    this._initialValue = initialValue;-->
+<!--                    this._higherValue  = higherValue;-->
+<!--                    this._title        = title;-->
+<!--                    this._subtitle     = subtitle;-->
+<!--                }-->
+<!--                _buildConfig() {-->
+<!--                    return {-->
+<!--                        rangeContainer: {-->
+<!--                            backgroundColor: '#ffffff',-->
+<!--                            width: 30,-->
+<!--                            ranges: [-->
+<!--                                { startValue: 78.0, endValue: 79.5, color: '#ff8228' }, // 위험1-->
+<!--                                { startValue: 79.5, endValue: 81 , color: '#4166f5'}, //안전-->
+<!--                                { startValue: 81.0, endValue: 82.0, color: '#ffc228' }, // 경고-->
+<!--                                { startValue: 82.0, endValue: 82.5, color: '#ff8228' } // 위험2-->
+<!--                            ]-->
+<!--                        },-->
+<!--                        valueIndicator: { color: '#000' },-->
+<!--                        geometry: { startAngle: 200, endAngle: 340 },-->
+<!--                        scale: {-->
+<!--                            startValue: 78.0,-->
+<!--                            endValue:   this._higherValue,-->
+<!--                            orientation: 'outside',-->
+<!--                            tick:        { visible: true, length: 20, width: 1, color: '#000' },-->
+<!--                            minorTick:   { visible: true, length: 5, width: 1, color: '#000' },-->
+<!--                            label:       { font: { color: '#4c5156', size: 12 } }-->
+<!--                        },-->
+<!--                        title: {-->
+<!--                            verticalAlignment: 'bottom',-->
+<!--                            text: this._title,-->
+<!--                            subtitle: {-->
+<!--                                text: this._subtitle,-->
+<!--                                font: { weight: 600, size: 20 }-->
+<!--                            }-->
+<!--                        },-->
+<!--                        value: this._initialValue-->
+<!--                    };-->
+<!--                }-->
+<!--                init() {-->
+<!--                    // 인스턴스를 this._gauge에 저장-->
+<!--                    this._gauge = $(this._el)-->
+<!--                        .dxCircularGauge(this._buildConfig())-->
+<!--                        .dxCircularGauge('instance');-->
+<!--                    return this;-->
+<!--                }-->
+<!--            }-->
 
-            // 2) 게이지 인스턴스 생성
-            const gaugeInstances = [];
-            $('.gauge').each((i, el) => {
-                const letter = String.fromCharCode(65 + i); // 'A', 'B', 'C',...
-                const gc = new GaugeChart(el, {
-                    initialValue: 78.0,
-                    higherValue: 82.5,
-                    title:        '78.0 ºC',           // 초기 숫자
-                    subtitle:     `금형온도 ${letter}` // A, B, C
-                }).init();
-                gaugeInstances.push(gc._gauge);
-            });
+<!--            // 2) 게이지 인스턴스 생성-->
+<!--            const gaugeInstances = [];-->
+<!--            $('.gauge').each((i, el) => {-->
+<!--                const letter = String.fromCharCode(65 + i); // 'A', 'B', 'C',...-->
+<!--                const gc = new GaugeChart(el, {-->
+<!--                    initialValue: 78.0,-->
+<!--                    higherValue: 82.5,-->
+<!--                    title:        '78.0 ºC',           // 초기 숫자-->
+<!--                    subtitle:     `금형온도 ${letter}` // A, B, C-->
+<!--                }).init();-->
+<!--                gaugeInstances.push(gc._gauge);-->
+<!--            });-->
 
 
-            // 4) Socket.IO 연결 & 5초마다 new_data 받기
-            const socket = io('http://localhost:5000', { transports: ['polling'] });
-            socket.on('connect', () => console.log('Gauge socket connected'));
-            socket.on('new_data', msg => {
-                gaugeInstances.forEach((g, i) => {
-                    const v = msg.values[i];                // i=0 → A, 1 → B, 2 → C
-                    g.option('value', v);
-                    g.option('title.text', `${v.toFixed(1)} ºC`);
-                });
-            });
+<!--            // 4) Socket.IO 연결 & 5초마다 new_data 받기-->
+<!--            const socket = io('http://localhost:5000', { transports: ['polling'] });-->
+<!--            socket.on('connect', () => console.log('Gauge socket connected'));-->
+<!--            socket.on('new_data', msg => {-->
+<!--                gaugeInstances.forEach((g, i) => {-->
+<!--                    const v = msg.values[i];                // i=0 → A, 1 → B, 2 → C-->
+<!--                    g.option('value', v);-->
+<!--                    g.option('title.text', `${v.toFixed(1)} ºC`);-->
+<!--                });-->
+<!--            });-->
 
-        });
-    </script>
+<!--        });-->
+<!--    </script>-->
 </div>
