--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -11,8 +11,8 @@
                 <th>주문날짜</th>
                 <th>담당직원</th>
                 <th>공정상태</th>
-                <th class="text-center"> #</th>
-                <th></th>
+                <th class="text-center">공정관리</th>
+                <th>실시간현황</th>
             </tr>
             </thead>
             <tbody>
@@ -49,9 +49,9 @@
                        class="btn btn-dark btn-sm border me-2">공정결과</a>
                     <span th:id="'process-result-placeholder-a-' + ${order.id}"></span>
                     <!-- 주문취소 버튼 -->
-                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm " th:if="${order.orderState == '준비 중'}"> 주문 취소</button>
+                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm " th:if="${order.orderState == '준비 중'}"> 주문취소</button>
 
-                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm disabled" th:if="${order.orderState != '준비 중'}"> 주문 취소</button>
+                    <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm disabled" th:if="${order.orderState != '준비 중'}"> 주문취소</button>
                 </td>
                 <td>
                     <span th:id="'progress-text-a-' + ${order.id}">[[${order.completedCount}]] / [[${order.orderQuantity}]] </span>
@@ -66,18 +66,25 @@
     </div>
     <div class="table-responsive table-md">
         <table class="table table-hover table-striped">
+            <colgroup>
+                <col style="width: 20%">   <!--md 사이즈 화면 비율로 조정 # -->
+                <col style="width: 15%">  <!-- 제품명 -->
+                <col style="width: 20%">  <!-- 주문수량 -->
+                <col style="width: 20%">  <!-- md 사이즈에서만 날짜포맷 변경 주문날짜  -->
+                <col style="width: 25%">  <!-- 담당직원 -->
+            </colgroup>
             <thead>
             <tr>
-                <th class="ps-3">#</th>
+                <th class="ps-3 ">#</th>
                 <th>제품명</th>
                 <th>주문수량</th>
                 <th>주문날짜</th>
+                <th>담당직원</th>
             </tr>
             <tr>
-                <th>담당직원</th>
                 <th>공정상태</th>
-                <th>#</th>
-                <th></th>
+                <th colspan="3">공정관리</th>
+                <th>실시간현황</th>
             </tr>
             </thead>
             <tbody>
@@ -86,12 +93,12 @@
                     <td th:text="${order.id}" class="ps-3">1</td>
                     <td th:text="${order.productName}"></td>
                     <td th:text="${order.orderQuantity}"></td>
-                    <td th:text="${#temporals.format(order.orderDate,'yyyy-MM-dd HH:mm')}"></td>
+                    <td th:text="${#temporals.format(order.orderDate,'MM-dd HH:mm')}"></td>
+                    <td th:text="${order.employee.username}"></td>
                 </tr>
                 <tr>
-                    <td th:text="${order.employee.username}"></td>
                     <td th:id="'state-text-b-' + ${order.id}" th:text="${order.orderState}"></td>
-                    <td>
+                    <td colspan="3">
                         <!-- 배합시작 버튼-->
                         <form th:action="@{/order/{id}/first-process(id=${order.id})}" method="post" style="display:inline;">
                             <input type="hidden" name="page" th:value="${ordersList.number}" />
@@ -118,9 +125,9 @@
                             class="btn btn-dark btn-sm border me-2">공정결과</a>
                         <span th:id="'process-result-placeholder-b-' + ${order.id}"></span>
                         <!-- 주문취소 버튼 -->
-                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm " th:if="${order.orderState == '준비 중'}"> 주문 취소</button>
+                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm " th:if="${order.orderState == '준비 중'}"> 주문취소</button>
 
-                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm disabled" th:if="${order.orderState != '준비 중'}"> 주문 취소</button>
+                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${order.id}" class="btn btn-delete btn-sm disabled" th:if="${order.orderState != '준비 중'}"> 주문취소</button>
                     </td>
                     <td>
                         <span th:id="'progress-text-b-' + ${order.id}">[[${order.completedCount}]] / [[${order.orderQuantity}]]</span>
